Avoid using tilde for home directory

--- a/src/main/resources/sales.properties
+++ b/src/main/resources/sales.properties
@@ -4,7 +4,7 @@ dsMySQL_Classicmodels.jdbc.url=jdbc:mysql://localhost:3306/classicmodels
 dsMySQL_Classicmodels.jdbc.username=root
 dsMySQL_Classicmodels.jdbc.password=Password1
 
-# Linux
-dataLocation=~/ignite-sales-data-loading-demo/Data/
+# Linux - home(~) does not seem to work; put physical directory
+dataLocation=/home/glenn/ignite-sales-data-loading-demo/Data/
 # Windowss
 #dataLocation=C:\\data\\sales\\
