Fix dockerfile for custom ports and latest build

--- a/src/main/resources/sales.properties
+++ b/src/main/resources/sales.properties
@@ -6,5 +6,5 @@ dsMySQL_Classicmodels.jdbc.password=Password1
 
 # Linux - home(~) does not seem to work; put physical directory
 dataLocation=/home/glenn/ignite-sales-data-loading-demo/Data/
-# Windowss
+# Windows
 #dataLocation=C:\\data\\sales\\
